# Weird-Golf-Game

./: .gitignore  .gitmodules  CMakeLists.txt  LogTest.sln  Main.cpp  Readme.md  Team 7 Weird Golf Game ReadMe.docx  Unit_Test_Guide.docx
Debug/: LogTest.ilk
FromBeforeRemovingCmake/AI/: PushdownMachine.cpp  PushdownState.cpp  PushdownState.h  State.cpp  State.h  StateMachine.cpp  StateTransition.cpp
FromBeforeRemovingCmake/ComponentSystem/: Component.h  GameObject.cpp  GameObject.h  Script.cpp  Script.h  Transform.h
FromBeforeRemovingCmake/Logger/: FileLogger.h
Game_Tech/: CSC8503 Codebase.sln
Game_Tech/Common/: Camera.h  Common.vcxproj  Matrix4.h  MeshGeometry.h  Quaternion.cpp  Quaternion.h  Vector3.h  Window.cpp
Game_Tech/FontBuilder/: FontBuilder.vcxproj
Game_Tech/PS4Starter/: EnjoyCollada.h  EnjoyColladaMesh.h  ExampleRenderer.cpp  ExampleRenderer.h  Light.h  Mesh.h  PGameObject.cpp  PGameObject.h  PS4Starter.vcxproj  PS4Starter.vcxproj.filters  RenderObject.h  SceneNode.cpp  SceneNode.h  main.cpp
Levels/: TestLevel.blend  TestLevel.mtl
LogTest/: LogTest.cpp  LogTest.vcxproj  LogTest.vcxproj.filters
LogTest/Debug/: vc142.idb
Logger/: LogMain.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters
Logger/Debug/: Logger.idb
Logger/logs/: log.txt
OBJLoader/OBJLoader/: OBJLoader.sln
Weird Golf Game/: Logger.h  Main.cpp  Weird Golf Game.vcxproj  Weird Golf Game.vcxproj.filters
Weird Golf Game/Debug/: vc142.idb
cmake/: FindENet.cmake
doc/: Logger.md
include/: GameClient.h  GameServer.h  GolfGame.h  Logger.h  NetworkBase.h  StateMachine.h  StateTransition.h
include/AI/: PushdownMachine.h
include/Common/: Camera.h  Matrix2.h  MeshGeometry.h  Mouse.h  RendererBase.h  SimpleFont.h  TextureLoader.h  Win32Keyboard.h  Win32Mouse.h  Win32Window.h  Window.h
include/ComponentSystem/: Component.h  GameObject.h  Scene.h  Transform.h
include/FromGameTech/: Collectable.h  Enemy.h  EnemyPatrolSuperState.h  GameTechRenderer.h  GameWorld.h  Player.h  TutorialGame.h
include/Network/: GameClient.h  GameServer.h  NetworkBase.h
include/OpenGLRendering/: OGLRenderer.h  (+1 more)
patches/: typeinfo.h
project/: CSC8503 Codebase.sln
src/: FileLogger.cpp  GolfGame.cpp  Logger.cpp  Main.cpp  NetworkBase.cpp  PushdownMachine.cpp  PushdownState.cpp  StateMachine.cpp  StateTransition.cpp
submodules/FMOD/: CMakeLists.txt
submodules/FMOD/PS4/api/core/examples/: common_platform.cpp  gpu_compute.cpp  output_ports.cpp
submodules/FMOD/PS4/api/core/examples/vs2015/: 3d.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_custom.vcxproj  dsp_effect_per_speaker.vcxproj  dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_distance_filter.vcxproj  fmod_gain.vcxproj  fmod_noise.vcxproj  gapless_playback.vcxproj  generate_tone.vcxproj  gpu_compute.vcxproj  granular_synth.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  multiple_system.vcxproj  net_stream.vcxproj  output_ports.vcxproj  play_sound.vcxproj  play_stream.vcxproj  record.vcxproj  record_enumeration.vcxproj  user_created_sound.vcxproj
submodules/FMOD/PS4/api/core/examples/vs2017/: 3d.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_custom.vcxproj  dsp_effect_per_speaker.vcxproj  dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_distance_filter.vcxproj  fmod_gain.vcxproj  fmod_noise.vcxproj  gapless_playback.vcxproj  generate_tone.vcxproj  gpu_compute.vcxproj  granular_synth.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  multiple_system.vcxproj  net_stream.vcxproj  output_ports.vcxproj  play_sound.vcxproj  play_stream.vcxproj  record.vcxproj  record_enumeration.vcxproj  user_created_sound.vcxproj
submodules/FMOD/PS4/api/core/examples/vs2019/: 3d.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_custom.vcxproj  dsp_effect_per_speaker.vcxproj  dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_distance_filter.vcxproj  fmod_gain.vcxproj  fmod_noise.vcxproj  gapless_playback.vcxproj  generate_tone.vcxproj  gpu_compute.vcxproj  granular_synth.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  multiple_system.vcxproj  net_stream.vcxproj  output_ports.vcxproj  play_sound.vcxproj  play_stream.vcxproj  record.vcxproj  record_enumeration.vcxproj  user_created_sound.vcxproj
submodules/FMOD/PS4/api/core/inc/: fmod_ps4.h
submodules/FMOD/PS4/api/studio/examples/: common_platform.h
submodules/FMOD/PS4/api/studio/examples/vs2015/: 3d.vcxproj  3d_multi.vcxproj  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
submodules/FMOD/PS4/api/studio/examples/vs2017/: 3d.vcxproj  3d_multi.vcxproj  3d_multi.vcxproj.filters  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
submodules/FMOD/PS4/api/studio/examples/vs2019/: 3d.vcxproj  3d_multi.vcxproj  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
submodules/FMOD/PS4/doc/FMOD API User Manual/: core-api-channel.html  core-api-channelcontrol.html  core-api-channelgroup.html  core-api-common-dsp-effects.html  core-api-common.html  core-api-dsp.html  core-api-dspconnection.html  core-api-geometry.html  core-api-platform-android.html  core-api-platform-ios.html  core-api-platform-ps4.html  core-api-platform-uwp.html  core-api-reverb3d.html  core-api-sound.html  core-api-soundgroup.html  core-api-system.html  core-api.html  platforms-android.html  platforms-html5.html  platforms-ios.html  platforms-linux.html  platforms-mac.html  platforms-ps4.html  platforms-uwp.html  platforms-windows.html  platforms.html  welcome-revision-history.html
submodules/FMOD/PS4/plugins/resonance_audio/lib/: resonanceaudio.prx
tests/: Test1.cpp
(+974 files in other folders)
