project (FMOD VERSION 1 LANGUAGES CSharp)
include(CSharpUtilities)

file(GLOB SRC_CORE_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/core/inc/*.cs)
file(GLOB HEADER_CORE_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/core/inc/*.h)
file(GLOB HEADER_PP_CORE_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/core/inc/*.hpp)
file(GLOB HEADER_FSBANK_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/fbank/inc/*.h)
file(GLOB HEADER_STUDIO_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/studio/inc/*.h)
file(GLOB SRC_STUDIO_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/studio/inc/*.cs)
file(GLOB HEADER_PP_STUDIO_FILES ${PROJECT_SOURCE_DIR}/${TARGET_BUILD_PLATFORM}/api/studio/inc/*.hpp)

add_library(FMOD SHARED
	${SRC_CORE_FILES}
	${HEADER_CORE_FILES}
	${HEADER_PP_CORE_FILES}
	${HEADER_FSBANK_FILES}
	${HEADER_STUDIO_FILES}
	${SRC_STUDIO_FILES}
	${HEADER_PP_STUDIO_FILES}
)

